--- a/style.css
+++ b/style.css
@@ -11,5 +11,10 @@
     margin: auto;
 }
 h1{
-    
+    text-transform: uppercase;
+    color: white;
+    font-size: 80px;
+    text-align: center;
+    position: relative;
+    top: 50px;
 }
