--- a/style.css
+++ b/style.css
@@ -24,9 +24,15 @@ h1{
     top: 50px;
 }
 .pattern {
-  
-  
-  
-  .row{
+   width: 200px;
+   height:200px;
+   margin: 20px;
+    float:left;
+   
+  }
+  .carta{
+      max-width: 100%;
+      max-height: 100%;
+      border-radius: 1rem;
       
   }
