--- a/style.css
+++ b/style.css
@@ -22,10 +22,11 @@
 h1{
     text-transform: uppercase;
     color: white;
-    font-size: 80px;
+    font-size:120px;
     text-align: center;
     position: relative;
     top: 50px;
+    font-family: 'Nerko One', cursive;
 }
 .pattern {
     width: 400px;
@@ -38,10 +39,17 @@ h1{
       max-width: 100%;
       max-height: 100%;
       border-radius: 1rem;
+      cursor: pointer;
       
+  }
+
+  .pattern:hover .carta{
+   
   }
   /*Main*/
   /*Footer*/
   h2{
       text-align: center;
+      font-family: 'Nerko One', cursive;
+      font-size: 30px;
   }
