--- a/style.css
+++ b/style.css
@@ -29,19 +29,22 @@ h1{
     font-family: 'Nerko One', cursive;
 }
 .pattern {
-    width: 400px;
-    height:200px;
+    width: 200px;
+    height:400px;
     margin: 50px;
     float:left;
-    
+    background-image: url(img/pattern.png);
+    background-repeat: repeat;
+      
   }
   .carta{
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 70%;
       border-radius: 1rem;
       cursor: pointer;
       
   }
+  
 
   .pattern:hover .carta{
    
