--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@
     margin: 0;
     padding: 0;
 }*/
-/*.clearfix::after{
+.clearfix::after{
     content: "";
     display: table;
     clear: both;
-}*/
+}
 /*Main rules*/
 
 /*Main*/
@@ -28,26 +28,32 @@ h1{
     font-family: 'Nerko One', cursive;
 }
 .pattern {
-    width: 200px;
+    width: 300px;
     height:400px;
     margin: 50px;
     float:left;
     background-image: url(img/pattern.png);
-    background-repeat: repeat;
+    border-radius: 1rem;
+    cursor: pointer;
       
   }
   .carta{
       width: 100%;
       height: 70%;
       border-radius: 1rem;
-      cursor: pointer;
+      background-color: white;
+      display: none;
       
   }
   
 
   .pattern:hover .carta{
-   
+   display: block;
   }
+.writting{
+    position: absolute;
+    text-align: center;
+}
   /*Main*/
   /*Footer*/
   h2{
