--- a/style.css
+++ b/style.css
@@ -37,10 +37,12 @@ h1{
     background-image: url(img/pattern.png);
     border-radius: 1rem;
     cursor: pointer;
+
+    
       
   }
   .carta{
-    width: 100%;
+    width:100%;
     height: 70%;
     border-radius: 1rem;
     background-color: white;
@@ -50,16 +52,19 @@ h1{
   }
   .pattern:hover .carta{
    display: block;
+   
+   
   }
 
 .writting{
     position: absolute;
+    top:
     text-align: center;
     font-family: 'Nerko One', cursive;
     font-size: 50px;
     
-    
 }
+
 .writting.bike{
     color: rgb(34, 81, 180);
 }
