--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ h1{
     border-radius: 1rem;
     cursor: pointer;
     position: relative;
-    
-    
+    background-size: contain;
+   
   }
   .carta{
     width:100%;
